fixed visibility errors

--- a/style.css
+++ b/style.css
@@ -68,6 +68,10 @@ button {
     visibility: hidden
 }
 
+#searchResults {
+    visibility: hidden
+}
+
 /* #showRecipe > h3 {
     color?
     center?
